fix search project and study containing special char